osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_dynamic_calls_have_annotated_rvalue/test_invalid_annotation[Union].txt
error: can only check dynamic return values of simple types or `Entity`, `ExtractLiteral`, `ExtractSecret`, `List`, `Optional`, `Secret`, `Union` generics
--> main.sml:1:5
     |
   1 | Foo: Union = JsonData(path='$.foo')
     |      ^ `Union` is generic, try `Union[T]` where `T` is a type like `str` or `int`